# celery-ecs-autoscaler

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  version.yml
examples/redis_worker/: Dockerfile  celery_app.py  config.py  docker-compose.yml  enqueue.py  tasks.py
src/celery_ecs_autoscaler/: __init__.py  _runner.py  config.py  scaler.py  sources.py  targets.py
tests/: conftest.py  test_calculate.py  test_config.py  test_cooldown.py  test_sources.py
